gitops/gatus/gatus-helm.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-status
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  tls:
  - hosts:
    - status.buc.sh
    secretName: cert-status-buc-sh
  rules:
  - host: status.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatus
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-status-http
  namespace: default
spec:
  rules:
  - host: status.10.0.0.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okd-console
            port:
              number: 8080
